<resources>
    <string name="app_name">Olx Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="olx">OLX</string>
    <string name="India">India</string>
    <string name="leading_market">India\'s Leading Market Place</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="terms">If You are accepting\n OLX Terms and Condition and Privacy Policy</string>


    <string name="facebook_app_id">3434024156609964</string>
    <string name="fb_login_protocol_scheme">fb3434024156609964</string>
    <string name="find_cars">Find Cars,Mobile phones and more.....</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="title_sell">sell</string>
    <string name="offering">What are you offering?</string>
    <string name="brand">Brand *</string>
    <string name="Year">Year *</string>
    <string name="KM_Driven">Km driven</string>
    <string name="ad_title">Ad Title *</string>
    <string name="mention">Mention the key features of your item(e.g brand model,age,type)</string>
    <string name="describe">Describe what you are selling*</string>
    <string name="include_features">include condition,features and reason for selling</string>
    <string name="Price">Price *</string>
    <string name="address">Address *</string>
    <string name="address_simple">Address</string>
    <string name="Phone">Phone Number *</string>
    <string name="requried_fields">* Required Fields</string>
    <string name="next">Next</string>
    <string name="include_details">Include Details</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_Phone_number">Enter Phone Number</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="Upload_five">Upload Up to Five Photos</string>
    <string name="Preview">Preview</string>
    <string name="Upload">Upload</string>
    <string name="Upload_photo">Upload Photo</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="title_my_Ads">My Ads</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="phone_simple">Phone</string>
    <string name="year_simple">Year</string>
    <string name="call">Call</string>
    <string name="title_Details">Details</string>
    <string name="title_browse">Browse Categories</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="sure_logout">Are You Sure You want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="Emailaddress">EmailAddress</string>
    <string name="phone_number_simple">Phone Number</string>
    <string name="postal_address">Postal Address</string>
    <string name="Save">Save</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_email">Enter EmailAddress</string>
    <string name="saved_success">Saved Successfully</string>
    <string name="title_settings">Settings</string>
</resources>