<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sofi.olxapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_browse"
            app:destination="@+id/navigation_browse_category"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.sofi.olxapplication.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell">
    <action
        android:id="@+id/action_sell_to_include_details"
        app:destination="@id/navigation_include_details"
        app:enterAnim="@anim/nav_default_pop_enter_anim"
        app:exitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="false"
        />
    </fragment>

    <fragment
        android:id="@+id/navigation_upload_photo"
        android:name="com.sofi.olxapplication.ui.uploadphoto.UploadPhotoFragment"
        android:label="@string/Upload_photo"
        tools:layout="@layout/fragment_upload_photo" />


    <fragment
        android:id="@+id/navigation_include_details"
        android:name="com.sofi.olxapplication.ui.includeDetails.IncludeDetailFragment"
        android:label="@string/include_details"
        tools:layout="@layout/fragment_include_details" >

        <action
          android:id="@+id/action_details_photo_myads"
            app:destination="@+id/navigation_upload_photo"
            app:popUpTo="@+id/navigation_include_details"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim">

        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_my_ads"
        android:name="com.sofi.olxapplication.ui.myAds.MyAdsFragment"
        android:label="@string/title_my_Ads"
        tools:layout="@layout/fragment_myads">

    <action
        android:id="@+id/action_my_ads_to_details"
        app:destination="@+id/navigation_details"
        app:popUpTo="@+id/navigation_my_ads"
        app:popUpToInclusive="false"
        app:enterAnim="@anim/nav_default_pop_enter_anim"
        app:exitAnim="@anim/nav_default_pop_exit_anim"/>


</fragment>
<fragment
android:id="@+id/navigation_browse_category"
android:name="com.sofi.olxapplication.ui.browseCategory.BrowseCategoryFragment"
android:label="@string/title_browse"
tools:layout="@layout/fragment_details">

    <action
        android:id="@+id/action_browse_to_details"
        app:destination="@+id/navigation_details"
        app:popUpTo="@+id/naigation_browse_category"
        app:popUpToInclusive="false"
        app:enterAnim="@anim/nav_default_pop_enter_anim"
        app:exitAnim="@anim/nav_default_pop_exit_anim"/>

</fragment>
    <fragment
android:id="@+id/navigation_details"
android:name="com.sofi.olxapplication.ui.details.DetailsFragment"
android:label="@string/title_Details"
tools:layout="@layout/fragment_browse"/>
    <fragment
android:id="@+id/navigation_settings"
android:name="com.sofi.olxapplication.ui.settings.SettingsFragment"
android:label="@string/title_settings"
tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_profile"
            app:destination="@+id/navigation_my_profile"
            app:popUpTo="@+id/navigation_settings"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>
    <fragment
android:id="@+id/navigation_my_profile"
android:name="com.sofi.olxapplication.ui.profile.profileFragment"
android:label="@string/title_profile"
tools:layout="@layout/fragment_profile">
    <action
        android:id="@+id/action_profile_to_settings"
        app:destination="@+id/navigation_settings"
        app:popUpTo="@+id/navigation_my_profile"
        app:popUpToInclusive="false"
        app:enterAnim="@anim/nav_default_pop_enter_anim"
        app:exitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

</navigation>