<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/dp_50"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@android:color/darker_gray">
            </View>


            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_6"
                >
                
                
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/brand"
                        android:inputType="text"
                        android:id="@+id/edBrand"/>




                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Year"
                        android:inputType="number"
                        android:id="@+id/edYear"/>




                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/llKmDriven"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/KM_Driven"
                        android:inputType="number"
                        android:id="@+id/edKmDriven"/>




                </com.google.android.material.textfield.TextInputLayout>

                
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:padding="@dimen/dp_8"
                    android:text="@string/ad_title"
                    android:textColor="@android:color/black"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/mention"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:id="@+id/edTitle"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/describe"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:id="@+id/edDescribe"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/include_features"
                    android:textColor="@android:color/black"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Price"
                    android:inputType="numberDecimal"
                    android:id="@+id/edPrice"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:id="@+id/edPostalAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:id="@+id/edphone"/>
                </com.google.android.material.textfield.TextInputLayout>

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:paddingEnd="@dimen/dp_8"
          android:paddingStart="@dimen/dp_8"
          android:text="@string/requried_fields"
          android:layout_height="wrap_content"/>


            </LinearLayout>



             <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:gravity="bottom">


                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimaryDark"
                     android:gravity="center"
                     android:padding="@dimen/dp_12"
                     android:text="@string/next"
                     android:textStyle="bold"
                     android:id="@+id/textViewNext"
                     android:textAllCaps="true"
                     android:textColor="@android:color/white"/>


              </LinearLayout>



        </LinearLayout>
            
    </ScrollView>


</LinearLayout>