<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@null"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_16">

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_source"
                android:layout_marginTop="@dimen/dp_16"/>


             <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@android:color/darker_gray"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/photo_gallery"
                android:textColor="@color/colorPrimaryDark"
                android:padding="@dimen/dp_16"
                android:textSize="@dimen/sp_20"
                android:id="@+id/textViewPhoto">
            </androidx.appcompat.widget.AppCompatTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@android:color/darker_gray"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@color/colorPrimaryDark"
                android:padding="@dimen/dp_16"
                android:textSize="@dimen/sp_20"
                android:id="@+id/textViewCamera">
            </androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/dp_16"
            android:textSize="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:id="@+id/textViewCancel">
        </androidx.appcompat.widget.AppCompatTextView>


</LinearLayout>