<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_8"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/colorLightGrey"
                    app:cardCornerRadius="@dimen/dp_4"
                    app:cardElevation="@dimen/dp_8"
                    app:cardUseCompatPadding="true"
                    android:layout_height="320dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/dp_16"
                        android:background="@drawable/box_dashed_line"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        android:id="@+id/linearLayoutChoosePhoto"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:id="@+id/imageViewChoosePhoto"
                            android:src="@drawable/choose_photo"
                            android:tint="@color/colorPrimaryDark" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/choose_photo"/>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recyclerView_upload"
                           android:visibility="gone"
                            />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_120"
                    android:background="@drawable/box_grey_bg_white"
                    android:layout_marginTop="@dimen/dp_34"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/Upload_five"
                    android:textAllCaps="true">

                </androidx.appcompat.widget.AppCompatTextView>
                </LinearLayout>

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_marginStart="@dimen/dp_16"
                  android:layout_marginEnd="@dimen/dp_8"
                  android:layout_marginTop="@dimen/dp_18"
                  android:layout_height="wrap_content"
                  >


                  <androidx.appcompat.widget.AppCompatButton
                      android:layout_width="@dimen/dp_160"
                      android:layout_height="wrap_content"
                      android:id="@+id/buttonPreview"
                      android:textAllCaps="false"
                      android:textColor="@color/colorPrimaryDark"
                      android:text="@string/Preview"
                      android:background="@drawable/box_blue_bg_white"/>

                  <androidx.appcompat.widget.AppCompatButton
                      android:layout_width="@dimen/dp_160"
                      android:layout_height="wrap_content"
                      android:id="@+id/buttonUpload"
                      android:layout_alignParentEnd="true"
                      android:textAllCaps="false"
                      android:textColor="@android:color/white"
                      android:text="@string/Upload"
                      android:background="@drawable/box_blue_bg_blue"/>

              </RelativeLayout>


            </LinearLayout>

    </ScrollView>

</LinearLayout>